--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,9 @@
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block body %}
     <div>
+
         <p>Dinosaurio</p>
     </div>
 </body>
 </html>
+{% endblock %}
