--- a/templates/base.html
+++ b/templates/base.html
@@ -2,32 +2,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-green">
-        <a href="#" class="navbar-brand">
-            <img src="images/logo.svg" height="28" alt="Municipalidad Luque">
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">Municipalidad<b> Luque</b></a>  		
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-    
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
             <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link active">Home</a>
-                <a href="#" class="nav-item nav-link">Profile</a>
-                <a href="#" class="nav-item nav-link">Messages</a>
-                <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+                <a href="/" class="nav-item nav-link">Inicio</a>
+                <a href="/contacto" class="nav-item nav-link">Contacto</a>			
             </div>
             <div class="navbar-nav ml-auto">
-                <a href="#" class="nav-item nav-link">Login</a>
-            </div>
+                <a  href="#" class="nav-item nav-link "><i class="fa fa-facebook"></i></a>
+                <a  href="#" class="nav-item nav-link"><i class="fa fa-twitter"></i></a>
+                <a  href="#" class="nav-item nav-link"><i class="fa fa-google-plus"></i></a>
+                
+            </div>		
         </div>
     </nav>
-    <p>dino</p>
+
     {% block body %}{% endblock %}
 </body>
 </html>
