--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
         <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
             <div class="navbar-nav">
                 <a href="/" class="nav-item nav-link">Inicio</a>
-                <a href="/contacto" class="nav-item nav-link">Contacto</a>			
+                <a href="/contacto" class="nav-item nav-link">Contacto</a>	
+                <a href="/novedades" class="nav-item nav-link">Novedades</a>			
             </div>
             <div class="navbar-nav ml-auto">
                 <a  href="#" class="nav-item nav-link "><i class="fa fa-facebook"></i></a>
