--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
-    <div>
-
-        <p>Index</p>
-    </div>
+    <section>
+        <div>
+            <p>Dinosaurio</p>
+        </div>
+        <div>
+            <p>Dinosaurio</p>
+        </div>
+    </section>
 </body>
 </html>
 {% endblock %}
