--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
                 <a href="/novedades" class="nav-item nav-link">Novedades</a>			
             </div>
             <div class="navbar-nav ml-auto">
-                <a  href="#" class="nav-item nav-link "><i class="fa fa-facebook"></i></a>
-                <a  href="#" class="nav-item nav-link"><i class="fa fa-twitter"></i></a>
-                <a  href="#" class="nav-item nav-link"><i class="fa fa-google-plus"></i></a>
+                <a  href="https://www.facebook.com/IntendenciaLucasValiente" target="_blank" class="nav-item nav-link "><i class="fa fa-facebook"></i></a>
+                <a  href="https://twitter.com/lucasgvaliente?lang=es" target="_blank" class="nav-item nav-link"><i class="fa fa-twitter"></i></a>
+                <a  href="https://www.youtube.com/channel/UC-faGg3XPgvikhYIm_G2S1Q" target="_blank" class="nav-item nav-link"><i class="fa fa-youtube"></i></a>
                 
             </div>		
         </div>
