--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
     <section>
-        <div>
-            <p>Dinosaurio</p>
-        </div>
-        <div>
-            <p>Dinosaurio</p>
-        </div>
+        <div class="container">
+            <div class="row" style="height:100px">
+                <div class="col-md-8" style="background-color:red"></div>
+                <div class="col-md-4" style="background-color:blue"></div>
+            </div>
+        </div>        
     </section>
 </body>
 </html>
